连续分歧如果经过线为0则不弹出

--- a/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/seriesOfBranch.html
@@ -98,7 +98,7 @@
     </form>
     <!--end 模式图信息-->
     <!--begin 经过线-->
-    <div class="module-box show-detail-title" ng-click="showDetail(1);">
+    <div class="module-box show-detail-title" ng-click="showDetail();">
         <div class="box-head font-bold">
              经过线 （共 <span ng-bind="diverObj.vias.length"></span> 条）
         </div>
