提取指令image404，创建分歧如果没有模式图则添加默认图

--- a/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -6,8 +6,8 @@
     </div>
 
     <div class="picMapShow">
-        <img class="picMapImg" ng-src="{{arrowMapShow}}">
-        <img class="picModalImg" ng-src="{{patternCodeSrc}}" alt="无此模式图">
+        <img class="picMapImg" ng-src="{{arrowMapShow}}" image-404="../../../images/road/img/noimg.png">
+        <img class="picModalImg" ng-src="{{patternCodeSrc}}" image-404="../../../images/road/img/noimg.png" alt="无此模式图">
         <div class="picMapDesc" ng-bind="diverObj.details[0].arrowCode"></div>
     </div>
     <form name="nameBranchForm">
