--- a/scripts/components/road/tpls/attr_link_tpl/pedestrianNaviTepl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/pedestrianNaviTepl.html
@@ -22,15 +22,15 @@
             <div><label class="control-label" >人行便道标记</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="sideWalkFlagRadio" value=0 ng-model="naviData.sidewalkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="sideWalkFlagRadio" value=0 ng-model="naviData.sidewalkFlag">
                     未采集
                 </label>
                 <label>
-                    <input type="radio" name="sideWalkFlagRadio" value=1 ng-model="naviData.sidewalkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="sideWalkFlagRadio" value=1 ng-model="naviData.sidewalkFlag">
                     有
                 </label>
                 <label>
-                    <input type="radio" name="sideWalkFlagRadio" value=2 ng-model="naviData.sidewalkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="sideWalkFlagRadio" value=2 ng-model="naviData.sidewalkFlag">
                     无
                 </label>
             </div>
@@ -56,15 +56,15 @@
             <div><label class="control-label" >行人步行</label></div>
             <div class="radio inline" style="text-align: left">
                 <label>
-                    <input type="radio" name="walkFlagRadio" value=0 ng-model="naviData.walkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="walkFlagRadio" value=0 ng-model="naviData.walkFlag">
                     未调查
                 </label>
                 <label>
-                    <input type="radio" name="walkFlagRadio" value=1 ng-model="naviData.walkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="walkFlagRadio" value=1 ng-model="naviData.walkFlag">
                     允许
                 </label>
                 <label>
-                    <input type="radio" name="walkFlagRadio" value=2 ng-model="naviData.walkFlag">
+                    <input ng-disabled="naviData.walkerLimitFlag" type="radio" name="walkFlagRadio" value=2 ng-model="naviData.walkFlag">
                     禁止
                 </label>
             </div>
