分歧经过线如果为0则不弹二级面板

--- a/less/editor.less
+++ b/less/editor.less
@@ -735,11 +735,11 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   cursor: pointer;
 }
 .close-tips {
-  .absolute-position(40px,2px,auto,auto);
+  float: right;
   color: #fff;
+  top: -20px;
+  font-size: 16px;
   cursor: pointer;
-  font-size: 20px;
-  transition: all .3s;
 }
 .close-tips:hover {
   color: #A5A1A1;
