解决下来菜单有时候不能触发onchange事件的问题,解决办法是修改了angular-chosen.js的源码增加了69到103行代码

--- a/less/editor.less
+++ b/less/editor.less
@@ -1434,25 +1434,25 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   font-size: 12px;
 }
 /*** 表单修改后样式 ***/
-.border-left(@borderStyle:auto,@borderWidth:auto,@borderColor:auto){
-  border-left:@borderStyle @borderWidth @borderColor;
-}
-form input[type="text"].ng-dirty,form textarea.ng-dirty,form select.ng-dirty,form input[type="number"].ng-dirty {
-  .border-left(solid,2px,@red) !important;
-}
-form select.localytics-chosen.ng-dirty + div > a {
-  .border-left(solid,2px,@red) !important;
-}
-form input[type=radio]:checked.ng-dirty:before{
-  content:"";
-  .border-left(solid,2px,@red) !important;
-  margin-left:-2px;
-}
-form input[type=checkbox].ng-dirty:before {
-  content:"";
-  .border-left(solid,2px,@red) !important;
-  margin-left:-2px;
-}
+//.border-left(@borderStyle:auto,@borderWidth:auto,@borderColor:auto){
+//  border-left:@borderStyle @borderWidth @borderColor;
+//}
+//form input[type="text"].ng-dirty,form textarea.ng-dirty,form select.ng-dirty,form input[type="number"].ng-dirty {
+//  .border-left(solid,2px,@red) !important;
+//}
+//form select.localytics-chosen.ng-dirty + div > a {
+//  .border-left(solid,2px,@red) !important;
+//}
+//form input[type=radio]:checked.ng-dirty:before{
+//  content:"";
+//  .border-left(solid,2px,@red) !important;
+//  margin-left:-2px;
+//}
+//form input[type=checkbox].ng-dirty:before {
+//  content:"";
+//  .border-left(solid,2px,@red) !important;
+//  margin-left:-2px;
+//}
 .modifiedInfo {
   color: @red !important;
 }
