分歧中等级bug修改

--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -24,16 +24,16 @@
                             <label class="control-label">标牌位置</label>
                             <div>
                                 <label for="left">
-                                    <input class="control-label" id="left" type="checkbox" ng-model="variableSpeed.locationLeft">
-                                    左
+                                    <input class="control-label" id="left" type="checkbox" ng-model="variableSpeed.locationTop">
+                                    上
                                 </label>
                                 <label for="right">
                                     <input class="control-label" id="right" type="checkbox" ng-model="variableSpeed.locationRight">
                                     右
                                 </label>
                                 <label for="top">
-                                    <input class="control-label" id="top" type="checkbox" ng-model="variableSpeed.locationTop">
-                                    上
+                                    <input class="control-label" id="top" type="checkbox" ng-model="variableSpeed.locationLeft">
+                                    左
                                 </label>
                             </div>
                         </li>
