--- a/scripts/components/poi/tpls/attr-deep/hotelTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/hotelTpl.html
@@ -7,7 +7,7 @@
                         <label>酒店星级</label>
                         <div class="block">
                             <label ng-repeat="(key, value) in reting">
-                                <input type="radio" value={{key}} name="rating" ng-model="poi.hotels[0].rating"> {{value}}
+                                <input type="radio" value={{key}} name="rating" ng-click="changeLevel();" ng-model="poi.hotels[0].rating"> {{value}}
                             </label>
                         </div>
                     </li>
