--- a/less/editor.less
+++ b/less/editor.less
@@ -2099,3 +2099,42 @@ input[type="range"]::-webkit-slider-thumb {
   cursor: pointer;
   font-size: 16px !important;
 }
+//begin 车辆类型
+.select-car{
+  //border: 1px solid;
+  margin: 5px !important;
+  border-radius: 3px;
+  padding: 3px 0 3px 13px;
+  transition: all .3s;
+  overflow: hidden;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  &.blue{
+    background-color: #40A2D7;
+    &:hover{
+      background-color: #358BBA;
+    }
+  }
+  &.red{
+    background-color: #EA7070;
+    &:hover{
+      background-color: #B25151;
+    }
+  }
+  &:hover{
+    padding-right: 13px !important;
+    padding-left: 0 !important;
+  }
+  .select-car-text{
+    color: #ffffff;
+    right: -2px;
+    position: relative;
+  }
+  .remove-car-type{
+    position: relative;
+    right: -12px;
+    cursor: pointer;
+  }
+}
+//end 车辆类型
