--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGatePassageTpl.html
@@ -1,10 +1,10 @@
 <div ng-controller="TollGatePassageCtl">
     <div class="fm-component" >
+        <div class="date-body content">
+            当收费方式为"ETC"和"未调查"时,不允许设置其他方式
+        </div>
         <div class="content" ng-repeat="passage in tollGateInfo.passages track by $index">
             <form>
-              <div class="date-body">
-                当收费方式为"ETC"和"未调查"时,不允许设置其他方式
-              </div>
                 <ul class="fm-ul fm-ul-form">
                     <li><label>通道 {{$index+1}}:</label></li>
                     <li style="padding: 10px" ng-if="tollGateInfo.type == 0 ||tollGateInfo.type == 2 ||tollGateInfo.type == 3 ||tollGateInfo.type == 4 || tollGateInfo.type == 5 ||tollGateInfo.type == 6 ||tollGateInfo.type == 7">
@@ -35,7 +35,7 @@
                                 </div>
                             </div>
                             <div class="date-body full-width">
-                                <div ng-class="{'select-car animated-fast':true,'blue':checkValue,'red':!checkValue}" ng-repeat="item in carData[$index] track by $index" ng-click="carSelect(item);">
+                                <div ng-class="{'select-car animated-fast':true,'blue':isAllowed[$parent.$index],'red':!isAllowed[$parent.$index]}" ng-repeat="item in carData[$index] track by $index" ng-click="carSelect(item);">
                                     <div class="select-car-text" ng-bind="item.label"></div>
                                     <span class="glyphicon glyphicon-remove remove-car-type"></span>
                                 </div>
