--- a/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/namesOfDetailTpl.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="namesOfLinkController" id="namesOfLinkDiv">
-    <form name="nameDetailForm">
+    <form class="fm-panel" name="nameDetailForm">
     <ul  class="list-group list-group-lg m-b-none" style="margin-bottom: 5px">
         <li class="list-group-item">
             <div><label class="control-label">名称组号</label></div>
@@ -9,8 +9,8 @@
         <li class="list-group-item">
             <div><label class="control-label">道路名称</label></div>
             <div class="inline">
-                <input type="text" ng-model="oridiData.name" style="width: 150px"/>
-                <span  class="glyphicon glyphicon-search"
+                <input type="text" ng-model="oridiData.name" />
+                <span  class="glyphicon glyphicon-search" style="margin-left:-20px"
                         ng-click="searchGroupidByNames($index)">
                 </span>
             </div>
