--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
@@ -71,7 +71,7 @@
                 <div class="clearfix"></div>
                 <!--pagation part-->
                 <div class="" style="padding:10px;">
-                    <ul style="margin: 0" uib-pagination boundary-links="true" total-items="12" ng-model="1" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+                    <ul style="margin: 0" uib-pagination boundary-links="true" total-items="12" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
                 </div>
             </div>
 
