--- a/scripts/components/road/tpls/attr_node_tpl/rwNodeTpl.html
+++ b/scripts/components/road/tpls/attr_node_tpl/rwNodeTpl.html
@@ -22,7 +22,7 @@
                 </div>
             </li>
             <li>
-                <label>图符号</label>
+                <label>图幅号</label>
                 <div>
                     <input type="text"  ng-model="rwNodeData.meshId" disabled="disabled">
                 </div>
