--- a/scripts/components/road/tpls/attr_branch_Tpl/nameInfoTepl.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/nameInfoTepl.html
@@ -37,14 +37,14 @@
                     <div class="d-group">
                         <div class="d-name">语言代码：</div>
                         <div class="d-value">
-                            <select class="d-input"  ng-model="nameObj.langCode" ng-options="value.code as value.name for value in languageCode" ></select>
+                            <select class="d-input"  ng-model="nameObj.langCode" ng-change="changeLangCode(nameObj);" ng-options="value.code as value.name for value in languageCode" ></select>
                         </div> 
                     </div>
                     <div class="d-group">
                         <div class="d-name">分歧名称：</div>
                         <div class="d-value">
                             <input type="text" class="d-input" placeholder="分歧名称"
-                                   ng-model="nameObj.name" ng-blur="diverName(nameObj.nameGroupid,nameObj.name)">
+                                   ng-model="nameObj.name" ng-blur="diverName(nameObj)">
                         </div> 
                     </div>
                     <div class="d-group">
@@ -82,8 +82,10 @@
                     <div class="d-group">
                         <div class="d-name">名称来源：</div>
                         <div class="d-value">
-                            <input type="text" class="d-input" placeholder="名称来源" ng-model="nameObj.srcFlag">
-                        </div> 
+                            <select class="d-input" ng-model="nameObj.srcFlag" ng-class="{true:'chosen-disabled'}[nameObj.langCode != 'ENG']"
+                                    ng-options="value.id as value.label for value in langSourceOptions" ng-disabled="nameObj.langCode != 'ENG'">
+                            </select>
+                        </div>
                     </div>
                 </div>
                 <div class="clearfix"></div>
