--- a/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
@@ -82,7 +82,7 @@
                         <li ng-if="cItem.isMain == 1">
                             <label>主点号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.nodePid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.nodePid" disabled/>
                             </div>
                         </li>
                         <li ng-if="cItem.isMain == 0">
