--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -63,7 +63,7 @@
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_SERIESBRANCH':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_SERIESBRANCH')">连续分歧</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_SIGNBOARDNAME':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_SIGNBOARDNAME')">方向看板</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_BIGCROSSSCHEMATIC':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_BIGCROSSSCHEMATIC')">大路口交叉点模式图</button>
-                <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_NORMALROAD':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_NORMALROAD')">普通道路方向</button>
+                <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_NORMALROAD':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_NORMALROAD')">普通方面名称</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_REALIMAGE':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_REALIMAGE')">实景图</button>
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'BRANCH_SIGNASREAL':'active'}[featureOperator]" ng-controller="addRdBranchCtrl" ng-click="addShape('BRANCH_SIGNASREAL')">实景看板</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'TRAFFIC_SIGNAL':'active'}[featureOperator]" ng-controller="addRdRelationCtrl" ng-click="addShape('TRAFFIC_SIGNAL')">信号灯</button>
