--- a/scripts/components/road/tpls/attr_link_tpl/basicOfOtherTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicOfOtherTpl.html
@@ -90,35 +90,35 @@
             <div><label class="control-label">左区划号码</label></div>
 
             <div class="inline" style="text-align: left">
-                <input type="text" placeholder="0530" ng-model="roadlinkData.leftRegionId">
+                <input type="text" placeholder="0530" ng-model="roadlinkData.leftRegionId" disabled class="chosen-disabled">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">右区划号码</label></div>
 
             <div class="inline" style="text-align: left">
-                <input type="text" placeholder="0530" ng-model="roadlinkData.rightRegionId">
+                <input type="text" placeholder="0530" ng-model="roadlinkData.rightRegionId" disabled class="chosen-disabled">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">起点号码</label></div>
             <div class="inline">
                 <input type="text"  placeholder="0"
-                       ng-model="roadlinkData.sNodePid" value="roadlinkData.sNodePid">
+                       ng-model="roadlinkData.sNodePid" value="roadlinkData.sNodePid" disabled class="chosen-disabled">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">终点号码</label></div>
             <div class="inline">
                 <input type="text"  placeholder="0"
-                       ng-model="roadlinkData.eNodePid" value="roadlinkData.eNodePid">
+                       ng-model="roadlinkData.eNodePid" value="roadlinkData.eNodePid" disabled class="chosen-disabled">
             </div>
         </li>
         <li class="list-group-item">
             <div><label class="control-label">LINK长度</label></div>
             <div class="inline">
                 <input type="text"  placeholder="0"
-                       ng-model="roadlinkData.length">
+                       ng-model="roadlinkData.length" disabled class="chosen-disabled">
             </div>
         </li>
         <li class="list-group-item">
