--- a/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
+++ b/scripts/components/road/tpls/attr_cross_tpl/rdCrossTpl.html
@@ -88,7 +88,7 @@
                         <li ng-if="cItem.isMain == 0">
                             <label>Node{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="cItem.nodePid" disabled/>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="cItem.nodePid" disabled/>
                             </div>
                         </li>
                     </ul>
