中等级bug修改

--- a/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -94,7 +94,7 @@
                     </div>
                     <!--3d-->
                     <div ng-show="diverObj.details[0].branchType == 3">
-                        <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.details[0].patternCode" ng-change="changePatternCode()" data-toggle="tooltip" data-placement="top" title="3D分歧模式图号必须5或8开头"/>
+                        <input type="text" class="d-input" placeholder="模式图号" ng-model="diverObj.details[0].patternCode" ng-focus="selectFirst(this,1)" ng-change="changePatternCode()" data-toggle="tooltip" data-placement="top" title="3D分歧模式图号必须5或8开头"/> <!---->
                     </div>
                 </div>
             </div>
