--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
@@ -16,12 +16,12 @@
 <div class="fm-panel" ng-controller="BatchJobPanelCtrl" style="margin:0px;">
     <div class="title">批处理</div>
     <div class="content">
-        <div class="fm-tabs" style="padding: 0 10px;" ng-init="batchType='poi'">
-            <a href="#" class="tab" ng-class="{'poi':'active'}[batchType]" ng-click="batchType='poi'">POI批处理</a>
-            <a href="#" class="tab" ng-class="{'road':'active'}[batchType]" ng-click="batchType='road'">道路批处理</a>
+        <div class="fm-tabs" style="padding: 0 10px;">
+            <a href="#" class="tab" ng-class="{1:'active'}[batchType]" ng-click="switchBatchType(1)">POI批处理</a>
+            <a href="#" class="tab" ng-class="{2:'active'}[batchType]" ng-click="switchBatchType(2)">道路批处理</a>
         </div>
         <div class="container-fluid" ng-switch="batchType">
-            <div ng-switch-when="poi" class="row dark">
+            <div ng-switch-when="1" class="row dark">
                 <div class="scroll-styled" style="width: 40%;float: left;min-height: 200px;max-height: 300px;padding: 0 10px;">
                     <table style="margin-bottom: 0" class="table table-bordered table-condensed fm-console-table">
                         <thead>
@@ -37,8 +37,8 @@
                             </tr>
                             <tr ng-class-odd="'tableOdd'" ng-repeat="item in batchBoxData">
                                 <td><input ng-click="batchSelect(item)" ng-model="item.checked" type="checkbox" /></td>
-                                <td ng-click="getBatchItem(item)">{{item.type}}</td>
-                                <td ng-click="getBatchItem(item)">{{item.handleArea}}</td>
+                                <td ng-click="getBatchItem(item)">{{item.ruleCode}}</td>
+                                <td ng-click="getBatchItem(item)">{{item.suiteName}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -60,10 +60,10 @@
                             </tr>
                             <tr ng-class-odd="'tableOdd'" ng-repeat="item in currentBatchItems">
                                 <td><input ng-model="item.checked" type="checkbox" /></td>
-                                <td>{{item.name}}</td>
-                                <td>{{item.desc}}</td>
-                                <td>{{item.level}}</td>
-                                <td>{{item.dec}}</td>
+                                <td>{{item.ruleName}}</td>
+                                <td>{{item.ruleDesc}}</td>
+                                <td>{{item.severity}}</td>
+                                <td>{{item.suiteId}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -71,11 +71,11 @@
                 <div class="clearfix"></div>
                 <!--pagation part-->
                 <div class="" style="padding:10px;">
-                    <ul style="margin: 0" uib-pagination boundary-links="true" total-items="12" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+                    <uib-pagination style="margin: 0" items-per-page="pageSize" boundary-links="true" total-items="totalNum" ng-model="currentPaging" ng-change="pageChanged()" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
                 </div>
             </div>
 
-            <div ng-switch-when="road" class="row scroll-styled dark" style="max-height: 200px;margin:5px;">
+            <div ng-switch-when="2" class="row scroll-styled dark" style="max-height: 200px;margin:5px;">
                 <label ng-repeat="item in batchList" class="col-md-6">
                     <input type="checkbox" name="batchList" ng-model="selectedBatches[item.id]" ng-value="item.id"> {{item.name}}
                 </label>
@@ -87,7 +87,7 @@
             <div class="progress-bar progress-bar-info progress-bar-striped fm-progress-bar" ng-style="{'width': progress + '%'}"></div>
         </div>
         <div style="text-align:center;">
-            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doExecute()">执 行</button>
+            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doExecute()">执 行{{currentPaging}}</button>
         </div>
     </div>
 </div>
