中等级bug修改

--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
@@ -70,8 +70,8 @@
                 </div>
                 <div class="clearfix"></div>
                 <!--pagation part-->
-                <div class="" style="padding:10px;">
-                    <uib-pagination style="margin: 0" items-per-page="pageSize" boundary-links="true" total-items="totalNum" ng-model="currentPaging" ng-change="pageChanged()" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
+                <div style="padding:10px;">
+                    <uib-pagination style="margin: 0" items-per-page="pageSize" boundary-links="true" ng-model="currentPaging" total-items="totalNum" ng-change="pageChanged()" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
                 </div>
             </div>
 
